package com.xuan.xutils.design.template;

/**
 * @author xuan
 * @since 2023/2/20
 */
public class GameCamping extends Game {

    @Override
    protected void doPlay() {
        System.out.println("露营真好玩");
    }
}
